Fix misplaced user count by stretched search input

--- a/src/styl/tga.styl
+++ b/src/styl/tga.styl
@@ -31,6 +31,7 @@
 
 		input
 			flex: 1
+			width: 100%
 			height: barSize
 			color: colors.dark
 			border: 0
